--- a/frontend/src/containers/Footer/Footer.css
+++ b/frontend/src/containers/Footer/Footer.css
@@ -1,5 +1,13 @@
 .footer {
- position: absolute;
- bottom: 0;
- width: 100%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #282c34;
+  min-height: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
