--- a/frontend/src/containers/Header/Header.css
+++ b/frontend/src/containers/Header/Header.css
@@ -1,1 +1,12 @@
-
+.header {
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #282c34;
+  min-height: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
